--- a/templates/modifier_profil.html
+++ b/templates/modifier_profil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Modifier Mon Profil - Okatech-Bénin</title>
+    <title>Modifier Mon Profil - PixelVerse</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/modification.css') }}" />
     <script src="{{ url_for('static', filename='js/script7.js') }}" defer></script>
 </head>
@@ -16,7 +16,7 @@
             <img src="{{ url_for('static', filename='images/logo.jpg') }}" width="100" height="100"
                 alt="Logo Okatech" />
         </div>
-        <div class="site-title">Okatech-Bénin</div>
+        <div class="site-title">PixelVerse</div>
 
         <div class="menu-icon" id="burger">&#9776;</div>
         <ul class="nav-links" id="navLinks">
@@ -64,7 +64,7 @@
 
     <footer>
         <p>
-            &copy; 2025 Okatech-Bénin. Tous droits réservés.
+            &copy; 2025 PixelVerse. Tous droits réservés.
             <br />
             <a href="mailto:contact@okatech-benin.com">Contact</a>
         </p>
