--- a/templates/populaires.html
+++ b/templates/populaires.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Images Populaires - Okatech-Bénin</title>
+    <title>Images Populaires - PixelVerse</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/populaire.css') }}" />
     <script src="{{ url_for('static', filename='js/script7.js') }}" defer></script>
 </head>
 
@@ -15,7 +15,7 @@
         <div class="logo-container">
             <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Logo Okatech" id="logo" />
         </div>
-        <div class="site-title">Okatech-Bénin</div>
+        <div class="site-title">PixelVerse</div>
 
         <div class="menu-icon" id="burger">&#9776;</div>
         <ul class="nav-links" id="navLinks">
@@ -57,7 +57,7 @@
 
     <footer>
         <p>
-            &copy; 2025 Okatech-Bénin. Tous droits réservés.<br />
+            &copy; 2025 PixelVerse. Tous droits réservés.<br />
             <a href="mailto:contact@okatech-benin.com">Contact</a>
         </p>
     </footer>
