--- a/static/css/modification.css
+++ b/static/css/modification.css
@@ -20,7 +20,7 @@ body {
 header {
     display: flex;
     align-items: center;
-    background: #333;
+    background: linear-gradient(to right, #9b6fc3, #2e1e3e);
     color: white;
     padding: 0.75rem 1.5rem;
     position: relative;
@@ -82,7 +82,7 @@ a.g {
 }
 
 a.o {
-    color: #ffcc80;
+    color: #db66b8;
 }
 
 /* Contenu principal */
@@ -103,7 +103,7 @@ a.o {
 .box h2 {
     text-align: center;
     margin-bottom: 1.5rem;
-    color: #ffa500;
+    color: #ff4ecb;
 }
 
 form {
@@ -133,7 +133,7 @@ input::placeholder {
 }
 
 button[type="submit"] {
-    background: #ffa500;
+    background: #ff4ecb;
     border: none;
     color: #222;
     padding: 12px;
@@ -145,7 +145,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background: #ff7f00;
+    background: #ff4ecb;
 }
 
 .box p {
@@ -154,7 +154,7 @@ button[type="submit"]:hover {
 }
 
 .box a {
-    color: #ffa500;
+    color: #ff4ecb;
     text-decoration: none;
 }
 
@@ -173,7 +173,7 @@ footer {
 }
 
 footer a {
-    color: #ffa500;
+    color: #ff4ecb;
     text-decoration: none;
 }
 
