--- a/static/css/populaire.css
+++ b/static/css/populaire.css
@@ -20,7 +20,7 @@ body {
 header {
     display: flex;
     align-items: center;
-    background: #333;
+    background: linear-gradient(to right, #9b6fc3, #2e1e3e, #2e1e3e);
     color: white;
     padding: 0.75rem 1.5rem;
     position: relative;
@@ -237,7 +237,6 @@ a.o {
 
 /* Footer */
 footer {
-    background-color: #222;
     color: #fff;
     text-align: center;
     padding: 2rem 1rem;
