--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -26,7 +26,7 @@
             <img src="{{ url_for('static', filename='images/logo.jpg') }}" width="100" height="100" alt="Logo Okatech"
                 id="logo" />
         </div>
-        <div class="site-title">Okatech-Bénin</div>
+        <div class="site-title">PixelVerse</div>
 
 
         <nav>
@@ -80,7 +80,7 @@
 
     <footer>
         <p>
-            &copy; 2025 Okatech-Bénin. Tous droits réservés.
+            &copy; 2025 PixelVerse. Tous droits réservés.
             <br>
             <a href="mailto:contact@okatech-benin.com">Contact</a>
         </p>
