--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -17,7 +17,7 @@
             <img src="{{ url_for('static', filename='images/logo.jpg') }}" width="100" height="100" alt="Logo Okatech"
                 id="logo" />
         </div>
-        <div class="site-title">Okatech-Bénin</div>
+        <div class="site-title">PixelVerse</div>
 
         <nav>
             <div class="menu-icon" id="burger">&#9776;</div>
@@ -87,7 +87,7 @@
                             <input id="politique" name="politique_p" type="checkbox" required>
                             J'ai pris connaissance de la politique de
                             <a href="politique_de_confidentialité.html" target="_blank">confidentialité</a>
-                            d'Okatech-Bénin
+                            d'PixelVerse
                         </label>
 
                         <button type="submit" style="margin-top: 15px;">Soumettre</button>
@@ -99,7 +99,7 @@
 
     <footer>
         <p>
-            &copy; 2025 Okatech-Bénin. Tous droits réservés.
+            &copy; 2025 PixelVerse. Tous droits réservés.
             <br>
             <a href="mailto:contact@okatech-benin.com">Contact</a>
         </p>
