--- a/templates/profil.html
+++ b/templates/profil.html
@@ -17,7 +17,7 @@
             <img src="{{ url_for('static', filename='images/logo.jpg') }}" width="100" height="100" alt="Logo Okatech"
                 id="logo" />
         </div>
-        <div class="site-title">Okatech-Bénin</div>
+        <div class="site-title">PixelVerse</div>
 
 
         <nav>
